--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -1,61 +1,19 @@
-html,
-body {
-  height: 100%;
-  min-height: 100%;
-}
-body {
-  background: #202020;
-  min-width: 1040px;
-  overflow: hidden;
-  margin: 0;
-}
-.container {
-  height: 100%;
-}
-
-#calendarView {
-  box-sizing: border-box;
-}
-
-/* Page layout */
-section {
-  width: 100%;
-  height: 100%;
-}
-
-section aside {
-  height: 100%;
-  float: left;
-  display: block;
-  margin-right: 2%;
-  width: 32%;
-}
-  
-section article {
-  height: 100%;
-  width: 66%;
-  float: left;
-  display: block;
-}
-
-.ui-view-calendar {
-  display: block;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-}
-
-/* Calendar layout */
-.calendar {
-  position: relative;
-  top: 50px;
-  right: 20px;
-}
-.calendar-chart-labels {
-  position: absolute;
-}
+/* Forces a 1:1 aspect ratio on the chart container */
 .chart-rings-container {
+  max-width: 1000px;
+  width: 100%;
+  height: 0;
+  padding-top: 100%;
+  position: relative;
+  transform: translate(0, -240px); 
+}
+
+/* Positions the content inside the chart container */
+.chart-rings-inside {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px;
 }
