Bring back weekday labels and stamp, and add D3 tooltips

--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -15,3 +15,11 @@
   font-size: 0.75em;
   text-align: right;
 }
+
+.tooltip {
+  background-color: white;
+  box-shadow: 2px 2px 20px 0 rgba(0, 0, 0, 0.5);
+  padding: 15px;
+  margin-bottom: auto;
+  z-index: 15;
+}
