--- a/client/src/components/SearchForm.css
+++ b/client/src/components/SearchForm.css
@@ -1,9 +1,5 @@
-body {
-  background-color: #F3F4EF;
-}
-
 .searchForm {
-  background-color: #15165c;
+  background-color: #202326;
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.75);
   padding: 20px;
   width: 320px;
