Update client for major v2 rewrite - Condense tooltips, since we now have multi-segment flights - Create an expanded full schedule modal view, when we click on a day - Support filtering awards for partner airlines, mixed cabin, and # of stops - Save last search settings to local session storage

--- a/client/src/components/Chart.css
+++ b/client/src/components/Chart.css
@@ -17,9 +17,7 @@
 }
 
 .tooltip {
-  display: grid;
-  grid-template-columns: 49px auto auto;
-  grid-gap: 20px;
+  display: inline-block;
   padding: 20px;
   background-color: #fff;
   box-shadow: 4px 4px 30px 0 rgba(0, 0, 0, 0.6);
