--- a/client/src/components/SearchForm.css
+++ b/client/src/components/SearchForm.css
@@ -101,3 +101,12 @@
   margin-left: 17px;
   margin-bottom: 2px;
 }
+
+.searchForm em {
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  font-style: normal;
+  line-height: normal;
+  color: #b8e986;
+}
